--- a/public/views/formz.html
+++ b/public/views/formz.html
@@ -1,4 +1,4 @@
-<div ng-controller='FormzController as formz'>
+<div ng-controller='BlogController as formz'>
     <div class="container">
         <div class="row">
             <section class="col-xs-12 col-md-6">
@@ -22,7 +22,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 user-submit">
+                    <div class="user-submit">
                         <button type="submit" class="btn btn-primary">Post Entry</button>
                     </div>
 
