--- a/sass/main.scss
+++ b/sass/main.scss
@@ -36,7 +36,7 @@ body {
     border-color:$nav-color;
   }
   .btn-primary:hover{
-    background-color:transparent;
+    background-color:$primary-color;
     border-color:$nav-color;
   }
 
@@ -70,8 +70,12 @@ body {
     border:4px solid #dedede;
   }
 
+  .content-entry{
+    margin:0 15px;
+  }
+
   .text-background {
-    height:60px;
+    min-height:60px;
     padding:4px;
     background-color: $nav-hover-color;
     border:3px solid $nav-back;
@@ -148,7 +152,7 @@ form .user-submit{
 
       a:hover, a:active{
         color:$body-hover-back;
-        background-color:transparent;
+        background-color:$primary-color;
       }
     }
 
