--- a/sass/main.scss
+++ b/sass/main.scss
@@ -117,7 +117,11 @@ form .user-submit{
   }
 
   .user-signin {
-    margin-top:33px;
+    margin-top:7px;
+  }
+
+  .accordian {
+    font-size:3.3em;
   }
 
   nav {
