--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -3,21 +3,19 @@
         <nav class="navbar" role="navigation">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-sm-4">
+                    <div class="col-xs-12 col-sm-5">
                         <a ui-sref="home">
                             <img class="logo" src="../images/kbytelogo-tight.png"></img>
                         </a>
                     </div>
-                    <div class="col-md-6">
-                        <nav class="hidden-sm hidden-xs">
+                    <div class="col-md-5">
+                        <nav class="hidden-xs">
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="comms">Comms</a></li>
                                 <li><span>|</span></li>
                                 <li><a ui-sref="formz">Formz</a></li>
                                 <li><span>|</span></li>
                                 <li><a ui-sref="kmaps">Maps</a></li>
-                                <li><span>|</span></li>
-                                <li><a ui-sref="kmapquery">Map Query</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -29,16 +27,16 @@
                             <span>{{nav.winLocation}}</span>
                         </div>
                     </div>
-                    <div class="hidden-lg hidden-md">
-                        <i class="fa fa-bars"></i>
+                    <div class="hidden-lg hidden-md hidden-sm">
+                        <i class="accordian fa fa-bars"></i>
                     </div>
-                    <nav id="topnav-mobile" class="collapse hidden-lg hidden-md">
+                    <nav id="topnav-mobile" class="collapse hidden-lg hidden-md hidden-sm">
                         <ul class="dropdown-menu" role="menu" style="display:block !important;">
-                            <li><a ui-sref="home">Home</a></li>
-                            <li><span>|</span></li>
                             <li><a ui-sref="comms">Comms</a></li>
                             <li><span>|</span></li>
-                            <li><a ui-sref="formz">Formz</a></li>
+                            <li><a ui-sref="forms">Forms</a></li>
+                            <li><span>|</span></li>
+                            <li><a ui-sref="kmaps">Maps</a></li>
                         </ul>
                     </nav>
                 </div>
