--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -1,3 +1,4 @@
+<div ng-controller='ModalController as modalc'></div>
 <div ng-controller='NavController as nav'>
     <div id="navbar">
         <nav class="navbar" role="navigation">
@@ -21,7 +22,7 @@
                     </div>
                     <div class="col-sm-2 hidden-xs">
                         <div class="user-signin">
-                            <button id="signin" class="btn btn-primary">Log In / Sign Up</button>
+                            <a id="signin">Log In / Sign Up</a>
                         </div>
                         <div class="pad-buffer">
                             <span>{{nav.winLocation}}</span>
