--- a/sass/main.scss
+++ b/sass/main.scss
@@ -82,6 +82,33 @@ body {
     border-radius: 3px;
   }
 
+  .editor-buttons .btn{
+    position: relative;
+    margin:6px;
+    width:36px;
+    height:36px;
+  }
+
+  .editor-buttons .btn-default{
+    background-color:#032d39;
+    color:#dadabb;
+  }
+
+  .editor-buttons .btn-default:hover, .editor-buttons .btn-default:active{
+    color:#ebebcc;
+    background-color:#032d39;
+  }
+  //be prepared to add / adjust width property here
+
+  .editor-buttons .edit-btn-text{
+    display:block;
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding:5px;
+  }
+
 
 }
 
@@ -116,8 +143,25 @@ form .user-submit{
     padding-left:15px;
   }
 
+
   .user-signin {
-    margin-top:7px;
+    margin-top: 10px;
+  }
+
+  .user-signin a {
+    color: $nav-color;
+    text-shadow: 1px 0 $primary-color;
+    font-size: 1.2em;
+    font-weight: 200;
+    background-color: transparent;
+  }
+
+  .user-signin a:hover, .user-signin a:active {
+    color: $body-hover-back;
+    cursor:pointer;
+    background-color: transparent;
+    transition: color 500ms;
+    text-decoration:none;
   }
 
   .accordian {
@@ -136,30 +180,32 @@ form .user-submit{
 
     }
 
-    .nav, .nav a{
+    .nav, .nav a {
       color: $nav-color;
-      text-shadow:1px 0 $primary-color;
+      text-shadow: 1px 0 $primary-color;
 
       li span {
-        display:inline-block;
-        padding-top:3px;
-        padding-bottom:3px;
-        font-size:1.8em;
+        display: inline-block;
+        padding-top: 3px;
+        padding-bottom: 3px;
+        font-size: 1.8em;
       }
 
       li a {
         padding: 3px 5px;
-        font-size:2.4em;
-        font-weight:200;
-        background-color:transparent;
+        font-size: 2.4em;
+        font-weight: 200;
+        background-color: transparent;
       }
 
-      a:hover, a:active{
-        color:$body-hover-back;
-        background-color:$primary-color;
+      a:hover, a:active {
+        color: $body-hover-back;
+        background-color: transparent;
+        text-decoration:none;
+        transition: color 500ms;
       }
+
     }
-
   }
 
 }
