--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -10,7 +10,7 @@
                         </a>
                     </div>
                     <div class="col-md-5">
-                        <nav class="hidden-xs">
+                        <div class="nav-sections hidden-xs">
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="comms">Comms</a></li>
                                 <li><span>|</span></li>
@@ -18,7 +18,7 @@
                                 <li><span>|</span></li>
                                 <li><a ui-sref="kmaps">Maps</a></li>
                             </ul>
-                        </nav>
+                        </div>
                     </div>
                     <div class="col-sm-2 hidden-xs">
                         <div class="user-signin">
@@ -31,7 +31,7 @@
                     <div class="hidden-lg hidden-md hidden-sm">
                         <i class="accordian fa fa-bars"></i>
                     </div>
-                    <nav id="topnav-mobile" class="collapse hidden-lg hidden-md hidden-sm">
+                    <div id="topnav-mobile" class="nav-sections-mobile collapse hidden-lg hidden-md hidden-sm">
                         <ul class="dropdown-menu" role="menu" style="display:block !important;">
                             <li><a ui-sref="comms">Comms</a></li>
                             <li><span>|</span></li>
@@ -39,7 +39,7 @@
                             <li><span>|</span></li>
                             <li><a ui-sref="kmaps">Maps</a></li>
                         </ul>
-                    </nav>
+                    </div>
                 </div>
             </div>
         </nav>
