--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,10 +1,15 @@
 
-<div ng-controller='HomeController as home'>
+<div>
+    <!-- controller set up in main.js -->
+    <div id="background">
+        <img src="./images/costa-ants.jpg" class="stretch" alt="Ants be like..."/>
+    </div>
+
     <div class="container-fluid">
         <section class="col-xs-12">
             <div class="home-spread">
-                <h3>Random thoughts, rants, and projects...</h3>
-                <h5>using whichever technologies that make sense</h5>
+                <h3>Random thoughts and projects...</h3>
+                <h5>messing with technologies that make sense</h5>
             </div>
 
         </section>
