--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -5,16 +5,18 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-sm-5">
-                        <a ui-sref="home">
-                            <img class="logo" src="../images/kbytelogo-tight.png"></img>
-                        </a>
+                        <div class="logo-absolute">
+                            <a ui-sref="home">
+                                <img class="logo" src="../images/kbyte-logo-small.png"></img>
+                            </a>
+                        </div>
                     </div>
                     <div class="col-md-5">
                         <div class="nav-sections hidden-xs">
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="comms">Comms</a></li>
                                 <li><span>|</span></li>
-                                <li><a ui-sref="formz">Formz</a></li>
+                                <li><a ui-sref="formz">Thoughts</a></li>
                                 <li><span>|</span></li>
                                 <li><a ui-sref="kmaps">Maps</a></li>
                             </ul>
