--- a/public/views/formz.html
+++ b/public/views/formz.html
@@ -1,4 +1,5 @@
-<div ng-controller='BlogController as formz'>
+<div>
+    <!-- controller set up in main.js -->
     <div class="container">
         <div class="row">
             <section class="col-xs-12 col-md-6">
