--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,8 +28,35 @@ body {
   font: 100% $font-stack;
   color: $primary-color;
 
+  video {
+    width: 100%    !important;
+    height: auto   !important;
+  }
+
   .pace.pace-inactive{
        height:0;
+  }
+
+  #background, #background-main {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+  }
+
+  #background{
+    z-index:-1;
+  }
+
+  #background-main{
+    opacity:0.67;
+    z-index:-3;
+  }
+
+  .stretch {
+    width:100%;
+    height:100%;
   }
 
   .btn-primary{
@@ -37,29 +64,35 @@ body {
     color:$primary-color;
     border-color:$nav-color;
   }
+
+  .btn-sm{
+    margin-top: -4px;
+    padding: 7px 10px;
+  }
+
   .btn-primary:hover{
     background-color:$primary-color;
     border-color:$nav-color;
   }
 
   .home-spread {
-    height: 600px;
-    background-image: url(../images/costa-ants.jpg);
-    background-repeat: no-repeat;
-    margin-top: -40px;
-    margin-left: -86px;
-    margin-right: -46px;
+    height:100%;
+    position:absolute;
+    //background-image: url(../images/costa-ants-med.jpg);
+    //background-repeat: no-repeat;
+    top:0;
+    left:0;
     color: #fff;
     text-shadow: 1px 0 $primary-color;
 
     h3 {
-      padding-top:9%;
-      padding-left:8%;
+      padding-top:76px;
+      padding-left:105px;
     }
 
     h5 {
-      padding-top: 2.33%;
-      padding-left: 8%;
+      padding-top: 40px;
+      padding-left: 132px;
     }
 
   }
@@ -85,6 +118,12 @@ body {
 
   .input-error {
     border-color: $error-color;
+  }
+
+  .socket-input input{
+    width: 80%;
+    padding:6px;
+    margin-top:2px;
   }
 
   ::-webkit-input-placeholder { font-weight:200; }
@@ -140,10 +179,9 @@ body {
 
   .editor-buttons .edit-btn-text{
     display:block;
-    transform: translate(-50%, -50%);
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top:0;
+    left:0;
     padding:5px;
   }
 
@@ -175,17 +213,42 @@ body {
     padding:10px 0px;
   }
 
+  .data-visual{
+
+    .axis path, .axis line{
+      fill:none;
+      stroke:#ababab;
+      shape-rendering: crispEdges;
+    }
+
+    .tick{
+      font: 10px sans-serif;
+    }
+
+    circle{
+      fill:#8888dd;
+    }
+
+  }
+
 
   nav {
 
-    padding-top: 6px;
+    position:relative;
     color: $nav-color;
     background-color: $nav-back;
     //background-image: url(../images/sos-dark.png);
     background-repeat: repeat;
+    padding-top: 4px;
 
     .logo {
-      padding-left: 15px;
+      padding: 0;
+    }
+
+    .logo-absolute{
+      position:absolute;
+      left:20px;
+      top:4px;
     }
 
     .user-signin {
@@ -214,7 +277,7 @@ body {
 
     .nav {
 
-      padding: 1px 10px;
+      padding: 38px 0 0 0;
 
     }
 
@@ -248,8 +311,10 @@ body {
   }
 
   nav.navbar{
+    height:81px;
     border-radius:0;
-    border-bottom: 5px solid $body-btn-back;
+    border-bottom: 4px solid $body-btn-back;
+
   }
 
 }
