--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,9 +29,26 @@ body {
   color: $primary-color;
 
   video {
+    position:absolute;
+    z-index:1;
     width: 100%    !important;
     height: auto   !important;
   }
+
+  .video-container {
+    position:relative;
+    height:440px;
+      
+    .video-playpause {
+      position:absolute;
+      z-index:3;
+      height:60px;
+      width:60px;
+      color:$nav-color;
+    }
+
+  }
+  
 
   .pace.pace-inactive{
        height:0;
