pushing photo filters and api updates to origin

--- a/public/views/charts.html
+++ b/public/views/charts.html
@@ -9,6 +9,7 @@
     </div>
     <h4>Boom!</h4>
         <scatter-chart class='data-visual' data="scharts.logs.data"></scatter-chart>
+        <bar-chart class='data-visual' data="scharts.logs.data"</scatter-chart>
         <div class="data-visual">
             <svg id="scales">
 
