--- a/public/views/modal_useraccount.html
+++ b/public/views/modal_useraccount.html
@@ -1,46 +1,48 @@
 <div ng-controller="LoginController as loginc">
-<div class="modal-header">
-    <h3 class="modal-title">{{loginc.username}}</h3>
-</div>
-<div class="modal-body row">
-    <form name="signIn" ng-show="!loginc.modalPassUpdate">
-        <div class="kb-user-name col-md-12 col-xs-12">
-            <h5>Email</h5>
-            <input input-focus class="modal-signin" type="text" name="email" pattern=".{8,}" ng-minlength="8" ng-maxlength="64"
-                   ng-model="loginc.userInfo.email" placeholder="&nbsp;&nbsp;name@example.com">
-        </div>
-        <div id="passwords" class="col-md-12 col-xs-12">
-            <div>
-                <h5>Password</h5>
-                <input input-focus class="modal-signin" type="password" name="userpassword" pattern=".{6,}" ng-minlength="6" ng-maxlength="64"
-                ng-model="loginc.userInfo.userpass" placeholder="&nbsp;&nbsp;At Least Six Characters">
-                <p class="kb-alert kb-alert-danger" ng-show="loginc.error">{{loginc.error}}</p>
+    
+    <div class="modal-header">
+        <h3 class="modal-title">{{loginc.username}}</h3>
+    </div>
+    <div class="modal-body row">
+        <form name="signIn" ng-show="!loginc.modalPassUpdate">
+            <div class="kb-user-name col-md-12 col-xs-12">
+                <h5>Email</h5>
+                <input input-focus class="modal-signin" type="text" name="email" pattern=".{8,}" ng-minlength="8" ng-maxlength="64"
+                       ng-model="loginc.userInfo.email" placeholder="&nbsp;&nbsp;name@example.com">
             </div>
-            <div>
-                <span class="kb-alert kb-alert-danger" ng-show="passError">{{loginc.passError}}</span>
-                <span class="kb-alert kb-alert-danger" ng-show="passUpdate.userpassword.$error.minlength">Password Must Be 6 Characters In Length</span>
-                <span ng-click="loginc.passupdate()"> Change Password </span>
+            <div id="passwords" class="col-md-12 col-xs-12">
+                <div>
+                    <h5>Password</h5>
+                    <input input-focus class="modal-signin" type="password" name="userpassword" pattern=".{6,}" ng-minlength="6" ng-maxlength="64"
+                    ng-model="loginc.userInfo.userpass" placeholder="&nbsp;&nbsp;At Least Six Characters">
+                    <p class="kb-alert kb-alert-danger" ng-show="loginc.error">{{loginc.error}}</p>
+                </div>
+                <div>
+                    <span class="kb-alert kb-alert-danger" ng-show="passError">{{loginc.passError}}</span>
+                    <span class="kb-alert kb-alert-danger" ng-show="passUpdate.userpassword.$error.minlength">Password Must Be 6 Characters In Length</span>
+                    <span ng-click="loginc.passupdate()"> Change Password </span>
+                </div>
             </div>
-        </div>
-        <div class="kb-user-name col-md-12 col-xs-12">
-            <h5>Set or Change Display Name</h5>
-            <input input-focus class="modal-signin" type="text" name="displayname" pattern=".{8,}" ng-minlength="8" ng-maxlength="64"
-                   ng-model="loginc.userInfo.displayname" placeholder="&nbsp;&nbsp;Display Name">
-        </div>
-    </form>
-    <form name="passUpdate" ng-show="loginc.modalPassUpdate">
-        <h5>Please Enter You Email Address</h5>
-        <span>A Link for you to update your password will be sent there</span>
-        <input input-focus class="modal-signin" type="text" name="email" pattern=".{8,}" ng-minlength="8" ng-maxlength="64"
-                   ng-model="loginc.userInfo.email" placeholder="&nbsp;&nbsp;name@example.com">
-
-    </form>
-</div>
-<div class="modal-footer">
-    <span class="request-processing" ng-if="loginc.processing"><img src="./images/processing-icon.gif" alt="Processing Request"/></span>
-    <button class="btn btn-primary" ng-disabled="loginc.processing" ng-click="loginc.proceed()">
-        {{loginc.okLabel}}
-    </button>
-    <button class="btn btn-warning" ng-disabled="loginc.processing" ng-click="loginc.cancel()">{{loginc.cancelLabel}}</button>
-</div>
+            <div class="kb-user-name col-md-12 col-xs-12">
+                <h5>Set or Change Display Name</h5>
+                <input input-focus class="modal-signin" type="text" name="displayname" pattern=".{8,}" ng-minlength="8" ng-maxlength="64"
+                       ng-model="loginc.userInfo.displayname" placeholder="&nbsp;&nbsp;Display Name">
+            </div>
+        </form>
+        <form name="passUpdate" ng-show="loginc.modalPassUpdate">
+            <div class="col-md-12 col-xs-12">
+                <h5>Please Enter You Email Address</h5>
+                <span>A Link for you to update your password will be sent there</span>
+                <input input-focus class="modal-signin" type="text" name="email" pattern=".{8,}" ng-minlength="8" ng-maxlength="64"
+                       ng-model="loginc.userInfo.email" placeholder="&nbsp;&nbsp;name@example.com">
+            </div>
+        </form>
+    </div>
+    <div class="modal-footer">
+        <span class="request-processing" ng-if="loginc.processing"><img src="./images/processing-icon.gif" alt="Processing Request"/></span>
+        <button class="btn btn-primary" ng-disabled="loginc.processing" ng-click="loginc.proceed()">
+            {{loginc.okLabel}}
+        </button>
+        <button class="btn btn-warning" ng-disabled="loginc.processing" ng-click="loginc.cancel()">{{loginc.cancelLabel}}</button>
+    </div>
 </div>
