--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@
 @import "bootstrap";
 @import "font-awesome";
 
-$font-stack:    Helvetica, sans-serif;
+$font-stack:    Roboto, Helvetica, sans-serif;
 $font-nav-stack: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande";
 $primary-color: #0b1d45;
 $nav-color: #e0e4ec;
@@ -28,6 +28,7 @@ body {
   font: 100% $font-stack;
   color: $primary-color;
 
+  
   video {
     position:absolute;
     z-index:1;
@@ -37,24 +38,30 @@ body {
 
   .video-container {
     position:relative;
-    height:440px;
-      
+
+              
     .video-playpause {
       position:absolute;
       z-index:3;
-      height:60px;
       width:60px;
       color:$nav-color;
     }
 
   }
-  
 
+  .video-off {
+    height:60px;
+  }
+
+  .video-on {
+    height:440px;
+  }
+  
   .pace.pace-inactive{
        height:0;
   }
 
-  #background, #background-main {
+  #background, .background-main {
     width: 100%;
     height: 100%;
     position: fixed;
@@ -66,7 +73,7 @@ body {
     z-index:-1;
   }
 
-  #background-main{
+  .background-main{
     opacity:0.67;
     z-index:-3;
   }
